updated fnode implemented code

--- a/bin/fnode_sequential_loading_analysis.ipynb
+++ b/bin/fnode_sequential_loading_analysis.ipynb
@@ -6,12 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib ipympl\n",
     "from QDP import qdp\n",
     "import os.path\n",
     "import numpy as np\n",
     "from scipy.stats import poisson\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "dp = '/home/ebert/jupyter-notebooks/FNode-data'"
    ]
   },
   {
@@ -28,8 +29,7 @@
     }
    ],
    "source": [
-    "dp = '/home/ebert/jupyter-notebooks/FNode-data'\n",
-    "exp_name = '2017_12_09_17_32_24_f12-retention-test'\n",
+    "exp_name = ''\n",
     "exp_date = '_'.join(exp_name.split('_')[:3])\n",
     "experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
     "cuts = [[15],[2]]\n",
