--- a/bin/fnode_loading_analysis.ipynb
+++ b/bin/fnode_loading_analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -29,14 +29,35 @@
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
       "ivars: [u'rb_d2_mot_amp']\n",
-      "ivar: -9.0000\tcloading: 0.183\trloading: 0.162\t\tcretention: 0.866 +- 0.004\trretention: 0.894 +- 0.009\n",
-      "ivar: -100.0000\tcloading: 0.231\trloading: 0.001\t\tcretention: 0.878 +- nan\trretention: 0.000 +- 0.258\n"
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "ivar: -8.6000\tcloading: 0.210\trloading: 0.171\t\tcretention: 0.738 +- 0.014\trretention: 0.947 +- 0.014\n",
+      "ivar: -9.0000\tcloading: 0.226\trloading: 0.128\t\tcretention: 0.748 +- 0.020\trretention: 0.922 +- 0.020\n",
+      "ivar: -9.4000\tcloading: 0.277\trloading: 0.089\t\tcretention: 0.874 +- 0.016\trretention: 0.966 +- 0.016\n",
+      "ivar: -9.8000\tcloading: 0.179\trloading: 0.079\t\tcretention: 0.872 +- 0.025\trretention: 0.924 +- 0.025\n",
+      "ivar: -10.2000\tcloading: 0.192\trloading: 0.029\t\tcretention: 0.943 +- 0.028\trretention: 0.966 +- 0.028\n",
+      "ivar: -10.6000\tcloading: 0.203\trloading: 0.004\t\tcretention: 0.842 +- 0.182\trretention: 0.750 +- 0.182\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:102: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  errs[r] = (z/n[r].astype('float'))*np.sqrt(ns[r].astype('float')*(1.0-ns[r].astype('float')/n[r].astype('float')))\n",
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:258: RuntimeWarning: divide by zero encountered in divide\n",
+      "  e['iterations'][i]['retention'] = retention/loaded\n",
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:258: RuntimeWarning: invalid value encountered in divide\n",
+      "  e['iterations'][i]['retention'] = retention/loaded\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "beeba7780e454d898012ee5ba206081b",
+       "model_id": "f2b53e7fa9ec4268973d34161fa4ea89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,7 +85,7 @@
     }
    ],
    "source": [
-    "exp_name = ''\n",
+    "exp_name = '2018_05_08_15_04_02_rb-loading-cs'\n",
     "if exp_name:\n",
     "    exp_date = '_'.join(exp_name.split('_')[:3])\n",
     "    experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
@@ -73,11 +94,11 @@
     "q = qdp.QDP(base_data_path=dp)\n",
     "q.load_data_file(experiment_file)\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
-    "cs_cuts = [[36],[2]]\n",
-    "rb_cuts = [[48],[3]]\n",
+    "cs_cuts = [[141],[3]]\n",
+    "rb_cuts = [[86],[3]]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
-    "retention = q.apply_thresholds()\n",
+    "retention = q.apply_thresholds(exclude_rois=[2])\n",
     "cuts = q.get_thresholds()\n",
     "roi_map = ['cs', 'rb']\n",
     "entries = np.product(retention['retention'].shape[:-1])\n",
