--- a/bin/fnode_multi-retention_analysis.ipynb
+++ b/bin/fnode_multi-retention_analysis.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -40,31 +40,129 @@
       "name 'rb_uwave_freq' is not defined\n",
       "ivars: [u'rb_d2_mot_amp']\n",
       "no loading observed\n",
-      "ivar:\t-9.000\tloading:0.128\tretention:0.830 +- 0.015\n",
-      "ivar:\t-9.000\tloading:0.210\tretention:0.887 +- 0.010\n",
-      "ivar:\t-100.000\tloading:0.251\tretention:0.868 +- nan\n",
-      "ivar:\t-100.000\tloading:0.001\tretention:0.000 +- 0.258\n",
-      "ivar:\t-9.000\tloading:0.131\tretention:0.820 +- 0.017\n",
-      "ivar:\t-9.000\tloading:0.183\tretention:0.871 +- 0.011\n",
-      "ivar:\t-100.000\tloading:0.227\tretention:0.824 +- nan\n",
-      "ivar:\t-100.000\tloading:0.000\tretention:nan +- nan\n",
-      "ivar:\t-9.000\tloading:0.183\tretention:0.805 +- 0.008\n",
-      "ivar:\t-9.000\tloading:0.162\tretention:0.894 +- 0.009\n",
-      "ivar:\t-100.000\tloading:0.231\tretention:0.803 +- nan\n",
-      "ivar:\t-100.000\tloading:0.001\tretention:0.000 +- 0.258\n",
-      "ivar:\t-9.000\tloading:0.179\tretention:0.810 +- 0.010\n",
-      "ivar:\t-9.000\tloading:0.171\tretention:0.886 +- 0.009\n",
-      "ivar:\t-100.000\tloading:0.230\tretention:0.814 +- nan\n",
-      "ivar:\t-100.000\tloading:0.000\tretention:0.000 +- 0.420\n"
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "no loading observed\n",
+      "ivar:\t0.000\tloading:0.166\tretention:0.916 +- 0.015\n",
+      "ivar:\t0.000\tloading:0.172\tretention:0.942 +- 0.015\n",
+      "ivar:\t0.000\tloading:-0.009\tretention:1.128 +- 0.015\n",
+      "ivar:\t0.000\tloading:0.186\tretention:0.892 +- 0.020\n",
+      "ivar:\t0.000\tloading:0.128\tretention:0.922 +- 0.020\n",
+      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.020\n",
+      "ivar:\t0.000\tloading:0.249\tretention:0.952 +- 0.016\n",
+      "ivar:\t0.000\tloading:0.089\tretention:0.966 +- 0.016\n",
+      "ivar:\t0.000\tloading:0.000\tretention:nan +- 0.016\n",
+      "ivar:\t0.000\tloading:0.161\tretention:0.950 +- 0.025\n",
+      "ivar:\t0.000\tloading:0.079\tretention:0.924 +- 0.025\n",
+      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.025\n",
+      "ivar:\t0.000\tloading:0.177\tretention:0.972 +- 0.038\n",
+      "ivar:\t0.000\tloading:0.030\tretention:0.933 +- 0.038\n",
+      "ivar:\t0.000\tloading:0.000\tretention:nan +- 0.038\n",
+      "ivar:\t0.000\tloading:0.177\tretention:0.938 +- 0.172\n",
+      "ivar:\t0.000\tloading:0.006\tretention:0.500 +- 0.172\n",
+      "ivar:\t0.000\tloading:0.000\tretention:nan +- 0.172\n",
+      "ivar:\t-8.600\tloading:0.009\tretention:0.000 +- 0.014\n",
+      "ivar:\t-8.600\tloading:0.186\tretention:0.946 +- 0.014\n",
+      "ivar:\t-8.600\tloading:0.000\tretention:nan +- 0.014\n",
+      "ivar:\t-9.000\tloading:0.000\tretention:nan +- 0.013\n",
+      "ivar:\t-9.000\tloading:0.184\tretention:0.951 +- 0.013\n",
+      "ivar:\t-9.000\tloading:0.000\tretention:nan +- 0.013\n",
+      "ivar:\t-9.400\tloading:0.000\tretention:nan +- 0.016\n",
+      "ivar:\t-9.400\tloading:0.177\tretention:0.927 +- 0.016\n",
+      "ivar:\t-9.400\tloading:0.000\tretention:-inf +- 0.016\n",
+      "ivar:\t-9.800\tloading:0.000\tretention:nan +- 0.041\n",
+      "ivar:\t-9.800\tloading:0.070\tretention:0.786 +- 0.041\n",
+      "ivar:\t-9.800\tloading:0.000\tretention:nan +- 0.041\n",
+      "ivar:\t-10.200\tloading:0.001\tretention:0.000 +- 0.036\n",
+      "ivar:\t-10.200\tloading:0.023\tretention:0.957 +- 0.036\n",
+      "ivar:\t-10.200\tloading:0.000\tretention:nan +- 0.036\n",
+      "ivar:\t-10.600\tloading:0.000\tretention:nan +- 0.066\n",
+      "ivar:\t-10.600\tloading:0.017\tretention:0.882 +- 0.066\n",
+      "ivar:\t-10.600\tloading:0.000\tretention:inf +- 0.066\n",
+      "ivar:\t0.000\tloading:0.158\tretention:0.968 +- 0.019\n",
+      "ivar:\t0.000\tloading:0.182\tretention:0.901 +- 0.019\n",
+      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.019\n",
+      "ivar:\t0.000\tloading:0.225\tretention:0.964 +- 0.022\n",
+      "ivar:\t0.000\tloading:0.149\tretention:0.879 +- 0.022\n",
+      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.022\n",
+      "ivar:\t0.000\tloading:0.137\tretention:0.942 +- 0.028\n",
+      "ivar:\t0.000\tloading:0.139\tretention:0.813 +- 0.028\n",
+      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.028\n",
+      "ivar:\t0.000\tloading:0.087\tretention:0.954 +- 0.037\n",
+      "ivar:\t0.000\tloading:0.091\tretention:0.769 +- 0.037\n",
+      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.037\n",
+      "ivar:\t0.000\tloading:0.123\tretention:0.943 +- 0.080\n",
+      "ivar:\t0.000\tloading:0.026\tretention:0.615 +- 0.080\n",
+      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.080\n",
+      "ivar:\t0.000\tloading:0.156\tretention:0.923 +- 0.102\n",
+      "ivar:\t0.000\tloading:0.016\tretention:0.375 +- 0.102\n",
+      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.102\n",
+      "ivar:\t-8.600\tloading:0.134\tretention:0.948 +- 0.019\n",
+      "ivar:\t-8.600\tloading:0.173\tretention:0.902 +- 0.019\n",
+      "ivar:\t-8.600\tloading:0.000\tretention:inf +- 0.019\n",
+      "ivar:\t-9.000\tloading:0.132\tretention:0.977 +- 0.027\n",
+      "ivar:\t-9.000\tloading:0.127\tretention:0.850 +- 0.027\n",
+      "ivar:\t-9.000\tloading:0.000\tretention:inf +- 0.027\n",
+      "ivar:\t-9.400\tloading:0.216\tretention:0.963 +- 0.028\n",
+      "ivar:\t-9.400\tloading:0.119\tretention:0.840 +- 0.028\n",
+      "ivar:\t-9.400\tloading:0.000\tretention:inf +- 0.028\n",
+      "ivar:\t-9.800\tloading:0.320\tretention:0.978 +- 0.049\n",
+      "ivar:\t-9.800\tloading:0.048\tretention:0.792 +- 0.049\n",
+      "ivar:\t-9.800\tloading:0.000\tretention:inf +- 0.049\n",
+      "ivar:\t-10.200\tloading:0.243\tretention:0.938 +- 0.082\n",
+      "ivar:\t-10.200\tloading:0.025\tretention:0.600 +- 0.082\n",
+      "ivar:\t-10.200\tloading:0.000\tretention:inf +- 0.082\n",
+      "ivar:\t-10.600\tloading:0.229\tretention:0.926 +- 0.070\n",
+      "ivar:\t-10.600\tloading:0.019\tretention:0.842 +- 0.070\n",
+      "ivar:\t-10.600\tloading:0.000\tretention:inf +- 0.070\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:102: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  errs[r] = (z/n[r].astype('float'))*np.sqrt(ns[r].astype('float')*(1.0-ns[r].astype('float')/n[r].astype('float')))\n",
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:259: RuntimeWarning: divide by zero encountered in divide\n",
+      "  e['iterations'][i]['retention'] = retention/loaded\n",
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:259: RuntimeWarning: invalid value encountered in divide\n",
+      "  e['iterations'][i]['retention'] = retention/loaded\n"
      ]
     }
    ],
    "source": [
     "exp_names = [\n",
-    "    '2018_04_30_15_13_08_cs-rb-load-collision-test',\n",
-    "    '2018_04_30_15_26_09_cs-rb-load-collision-test',\n",
-    "    '2018_04_30_15_51_30_cs-rb-load-collision-test',\n",
-    "    '2018_04_30_16_24_51_cs-rb-load-collision-test'\n",
+    "    '2018_05_08_15_04_02_rb-loading-cs',\n",
+    "    '2018_05_08_15_15_05_rb-loading-no-cs',\n",
+    "    '2018_05_08_15_25_52_rb-loading-cs',\n",
+    "    '2018_05_08_15_36_43_rb-loading-cs'\n",
     "]\n",
     "q = qdp.QDP(base_data_path=dp)\n",
     "for exp_name in exp_names:\n",
@@ -74,11 +172,11 @@
     "\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
     "roi_map = ['cs', 'rb']\n",
-    "cs_cuts = [[36],[3]]\n",
-    "rb_cuts = [[48],[3]]\n",
+    "cs_cuts = [[151],[3]]\n",
+    "rb_cuts = [[85],[3]]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
-    "retention = q.apply_thresholds()\n",
+    "retention = q.apply_thresholds(exclude_rois=[2])\n",
     "tbl_str = \"ivar:\\t{0}\\tretention:{1} +- {2}\"\n",
     "\n",
     "q.experiments[0]['variable_list']\n",
@@ -99,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -117,7 +215,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f86f1549a4d4169a21a7cc3d7f78617",
+       "model_id": "db81f46e7d5346b4b138b1a4a933ab92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,22 +250,21 @@
     "for e in range(len(retention['ivar'])):\n",
     "#     fits.append(np.polyfit(retention['ivar'][e,:,roi], retention['retention'][e,:,roi], 1))\n",
     "    l = len(retention['ivar'][e,:,roi])\n",
-    "#     if e == 3:\n",
-    "#         l = 4\n",
-    "    ax.errorbar(retention['ivar'][e,:l,roi], retention['retention'][e,:l,roi],\n",
-    "                yerr=retention['error'][e,:l,roi],\n",
-    "                fmt = colors[e]+'o-',\n",
-    "                label=legends[e]\n",
-    "    )\n",
+    "#     ax.errorbar(retention['ivar'][e,:,roi], retention['retention'][e,:,roi],\n",
+    "#     ax.errorbar(-8.6-np.linspace(0,2,6), retention['retention'][e,:,roi],                \n",
+    "#                 yerr=retention['error'][e,:,roi],\n",
+    "#                 fmt = colors[e]+'o-',\n",
+    "#                 label=legends[e]\n",
+    "#     )\n",
     "        \n",
-    "#     ax.plot(retention['ivar'][e,:,roi], retention['loading'][e,:,roi], colors[e]+'x')\n",
+    "    ax.plot(-8.6-np.linspace(0,2,6), retention['loading'][e,:,roi], colors[e]+'x')\n",
     "#     ax.plot(retention['ivar'][e,:,roi], np.poly1d(fits[-1])(retention['ivar'][e,:,roi]), colors[e]+'-' ,label=legends[e])\n",
     "ax.legend(bbox_to_anchor=(0.85, 0.95), loc=1, borderaxespad=0.)\n",
-    "ax.set_ylim(0.6, 1.01)\n",
+    "ax.set_ylim(0., 0.3)\n",
     "ax.set_xlabel(xlab)\n",
     "ax.set_ylabel('Retention')\n",
     "fmts = ['pdf', 'png']\n",
-    "fn = os.path.join(dp, os.path.dirname(experiment_file), 'cs_rb-collision_retention.{}')\n",
+    "fn = os.path.join(dp, os.path.dirname(experiment_file), 'cs_rb-collision_loading.{}')\n",
     "for fmt in fmts:\n",
     "    fig.savefig(fn.format(fmt), dpi=200, format=fmt)"
    ]
