--- a/bin/fnode_readout_analysis.ipynb
+++ b/bin/fnode_readout_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -29,13 +29,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "data at: 2018_05_09/2018_05_09_14_57_39_collisionak-retention-24ms/results.hdf5\n",
       "ivars: []\n",
-      "ivar:\t0.0\tretention:[ 0.87356322  0.        ] +- [        nan  0.18095439]\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  3.32900457e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  3.32900457e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "no loading observed\n",
+      "ivar:\t0.0\tretention:\t0.852(15)\t0.874(15)\n",
       "------------------------------\n",
-      "cs_s0:\tbg: 27.31\tsig: 31.5\tcut: 43\tload: 0.217457\n",
-      "cs_s1:\tbg: 0.30\tsig: 10.0\tcut: 4\tload: 0.181935\n",
-      "rb_s0:\tbg: 35.33\tsig: 36.9\tcut: 55\tload: 0.044618\n",
-      "rb_s1:\tbg: 0.40\tsig: 3.6\tcut: 3\tload: 0.010831\n"
+      "cs_s0:\tbg: 105.77\tsig: 54.9\tcut: 135\tload: 0.189664\n",
+      "cs_s1:\tbg: 0.08\tsig: 6.7\tcut: 2  \tload: 0.139032\n",
+      "rb_s0:\tbg: 55.88\tsig: 48.7\tcut: 80 \tload: 0.200568\n",
+      "rb_s1:\tbg: 0.17\tsig: 6.8\tcut: 3  \tload: 0.166452\n"
      ]
     }
    ],
@@ -50,11 +56,12 @@
     "q = qdp.QDP(base_data_path=dp)\n",
     "q.load_data_file(experiment_file)\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
-    "param_guess = [\n",
-    "    [(0.2, 25, 50), (0.2, 0.3, 10)],  # Cs\n",
-    "    [(0.1, 30, 70), (0.1, 0.3, 7)],  # Rb\n",
-    "]\n",
-    "results = q.generate_thresholds(guesses=param_guess)\n",
+    "# param_guess = [\n",
+    "#     [(0.2, 15, 35), (0.2, 0.3, 10)],  # Cs\n",
+    "#     [(0.1, 20, 40), (0.1, 0.3, 7)],  # Rb\n",
+    "# ]\n",
+    "# results = q.generate_thresholds(guesses=param_guess)\n",
+    "results = q.generate_thresholds()\n",
     "# cs_cuts = [[90],[3]]\n",
     "# rb_cuts = [[120],[4]]\n",
     "# q.set_thresholds(cs_cuts, roi=0)\n",
@@ -62,18 +69,26 @@
     "retention = q.apply_thresholds()\n",
     "cuts = q.get_thresholds()\n",
     "roi_map = ['cs', 'rb']\n",
-    "#tbl_str = \"ivar:\\t{0}\\tretention:{1:.3f} +- {2:.3f}\"\n",
-    "tbl_str = \"ivar:\\t{0}\\tretention:{1} +- {2}\"\n",
+    "\n",
+    "#tbl_str = \"ivar:\\t{0}\\tretention:{1} +- {2}\"\n",
     "entries = np.product(retention['retention'].shape[:-1])\n",
+    "\n",
     "for i in range(entries):\n",
+    "    erro = np.abs(np.floor(np.log10(retention['error'].reshape((entries,-1))[i][:2]))).astype(int)+1\n",
+    "    erro[erro<0] = 0\n",
+    "    tbl_str = \"ivar:\\t{0}\\tretention:\\t{1:0.{5:d}f}({2:.0f})\\t{3:.{6:d}f}({4:.0f})\"\n",
     "    print(tbl_str.format(\n",
     "        retention['ivar'].reshape((entries,-1))[i][0],\n",
-    "        retention['retention'].reshape((entries,-1))[i],\n",
-    "        retention['error'].reshape((entries,-1))[i]\n",
+    "        retention['retention'].reshape((entries,-1))[i][0],\n",
+    "        retention['error'].reshape((entries,-1))[i][0]*(10**erro[0]),\n",
+    "        retention['retention'].reshape((entries,-1))[i][1],\n",
+    "        retention['error'].reshape((entries,-1))[i][1]*(10**erro[1]),\n",
+    "        erro[0], erro[1]\n",
     "    ))\n",
+    "\n",
     "q.save_experiment_data()\n",
     "print('-'*30)\n",
-    "tbl_str = '{}_s{}:\\tbg: {:.2f}\\tsig: {:.1f}\\tcut: {}\\tload: {:3f}'\n",
+    "tbl_str = '{}_s{}:\\tbg: {:.2f}\\tsig: {:.1f}\\tcut: {: <3}\\tload: {:3f}'\n",
     "for r in range(2):\n",
     "    for s in range(2):\n",
     "        print(tbl_str.format(\n",
@@ -88,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -96,7 +111,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bbd864a028d44059eff480ab56ba93d",
+       "model_id": "36ed47991e754d98a6b4207eee789019",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -164,7 +179,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c12c994843e470b916fabbeb6a117cc",
+       "model_id": "1b4f00be8e6b4e92b41ab29f4a5f0785",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,13 +232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "126c5d6ca8c4476aad6f8ab488df4ce9",
+       "model_id": "0d21c6292ad64c58910730d69fcb39f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -253,8 +268,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.75317809  0.        ]\n",
-      " [ 0.24682191  0.        ]]\n"
+      "[[ 0.63168416  0.11394303]\n",
+      " [ 0.22438781  0.02998501]]\n"
      ]
     }
    ],
@@ -262,13 +277,14 @@
     "fig, ax = plt.subplots()\n",
     "qd = q.experiments[0]['iterations'][0]['quantized_data'][:,0]\n",
     "load_mat = np.zeros((2,2))\n",
-    "for c in range(2):\n",
-    "    for r in range(2):\n",
-    "        load_mat[c,r] = np.sum(np.all(qd==np.array([c,r]), axis=1), dtype='float')/qd.shape[0]\n",
+    "rois = 2\n",
+    "for c in range(rois):\n",
+    "    for r in range(rois):\n",
+    "        load_mat[c,r] = np.sum(np.all(qd[:,:rois]==np.array([c,r]), axis=1), dtype='float')/qd.shape[0]\n",
     "print load_mat\n",
-    "ax.bar(range(4), load_mat.flatten())\n",
-    "ax.set_xticks(range(4))\n",
-    "ax.set_xticklabels(['({},{})'.format(i//2, i%2) for i in range(4)])\n",
+    "ax.bar(range(rois**2), load_mat.flatten())\n",
+    "ax.set_xticks(range(rois**2))\n",
+    "ax.set_xticklabels(['({},{})'.format(i//rois, i%rois) for i in range(rois**2)])\n",
     "ax.set_xlabel('(Cs, Rb)')\n",
     "ax.set_ylabel('loading rate')\n",
     "\n",
@@ -1146,10 +1162,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {0: [[146], [4]], 1: [[92], [4]]},\n",
+       " 1: {0: [[151], [4]], 1: [[95], [4]]},\n",
+       " 2: {0: [[156], [4]], 1: [[96], [4]]},\n",
+       " 3: {0: [[158], [4]], 1: [[96], [5]]},\n",
+       " 4: {0: [[151], [4]], 1: [[91], [5]]},\n",
+       " 5: {0: [[154], [4]], 1: [[94], [5]]},\n",
+       " 6: {0: [[153], [4]], 1: [[94], [5]]},\n",
+       " 7: {0: [[146], [5]], 1: [[89], [5]]},\n",
+       " 8: {0: [[150], [4]], 1: [[92], [5]]},\n",
+       " 9: {0: [[151], [5]], 1: [[96], [6]]}}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "itr_cuts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n"
+     ]
+    }
+   ],
+   "source": [
+    "itr_cuts = {}\n",
+    "for itr in q.experiments[0]['iterations'].keys():\n",
+    "    results = q.generate_thresholds(itr=itr)\n",
+    "    itr_cuts[itr] = {\n",
+    "        0: q.get_thresholds()[0],\n",
+    "        1: q.get_thresholds()[1]\n",
+    "    }"
+   ]
   },
   {
    "cell_type": "code",
